# cheminformatics_ci_cd_template

./: README.md  pyproject.toml
.github/workflows/: code_check.yml
package_src/: dummy_file.py
src/: __init__.py  dummy_file.py
tests/: test_dummy_file.py
